--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.alliky.core.widget.CommonTitleBar
+    <com.alliky.core.widget.TitleBar
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         titlebar:centerText="首页"
         titlebar:centerType="textView"
-        titlebar:leftDrawable="@drawable/comm_titlebar_back_normal"
-        titlebar:leftDrawablePadding="0dp"
+        titlebar:leftDrawable="@mipmap/titlebar_arrow_left"
         titlebar:leftType="textView"
         titlebar:rightText="菜单"
         titlebar:rightType="textView" />
+
+
 
 </LinearLayout>
