--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:gravity="center"
+    tools:context=".MainActivity">
 
-    <com.alliky.core.widget.TitleBar
-        android:id="@+id/title_bar"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        titlebar:centerText="首页"
-        titlebar:centerType="textView"
-        titlebar:leftDrawable="@mipmap/titlebar_arrow_left"
-        titlebar:leftType="textView"
-        titlebar:rightText="菜单"
-        titlebar:rightType="textView" />
-
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        android:text="按钮" />
-
-    <Button
-        android:id="@+id/download_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        android:text="下载" />
-
+        android:text="Android"
+        android:textColor="#000"
+        android:textSize="18sp" />
 
 </LinearLayout>
